# docs/swagger.json
@@ -27,6 +27,26 @@
                 }
             }
         },
+        "/getSubjectContent": {
+            "get": {
+                "description": "Responds with the all subject contents",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "getSubjectContent"
+                ],
+                "summary": "Get Subject Contents",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SubjectContent"
+                        }
+                    }
+                }
+            }
+        },
         "/getSubjects": {
             "get": {
                 "description": "Responds with pong status.",
@@ -81,6 +101,20 @@
             "type": "object",
             "properties": {
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.SubjectContent": {
+            "type": "object",
+            "properties": {
+                "subjectContent": {
+                    "type": "string"
+                },
+                "subjectContentId": {
+                    "type": "string"
+                },
+                "subjectId": {
                     "type": "string"
                 }
             }
